# flask-chat-room

./: README.md  chat.py  pyproject.toml
app/: __init__.py
app/main/: events.py  forms.py  routes.py
app/templates/: chat.html  index.html
